Solve overflow issue in code blocks. Improves vertical rhythm. Fixes some broken https links.

--- a/src/pages/resume/styles.scss
+++ b/src/pages/resume/styles.scss
@@ -2,3 +2,11 @@
   text-align: center;
   padding: 0 0 .5em;
 }
+
+h4 {
+  margin-top: 1.5em;
+}
+
+h3 {
+  padding-top: 1.5em;
+}
